1999-10-07 John R. Jackson  <jrj@purdue.edu>

	* common-src/stream.c (stream_server): remove reference to portrange
	  variable.  Compliments of Randy Dees <rrd@amherst.com>.

1999-10-03 John R. Jackson  <jrj@purdue.edu>

	* server-src/driver.c (main): now that multiple results can come back
	  from taper and dumper without a handshake (e.g. NO-ROOM), we need to
	  process them all rather than just the first one.  Call the new
	  areads_dataready() function to peek and see if more data is ready.
	* common-src/amanda.h: declare areads_dataready().
	* common-src/file.c: define areads_dataready().  Fix some variable
	  types.  Fix a buffer expansion problem.  Add code to the test
	  program to force buffer expansion to be checked out.

1999-10-03 John R. Jackson  <jrj@purdue.edu>

	* common-src/file.c (areads_getbuf): fix a buffer allocation problem.

1999-10-03 John R. Jackson  <jrj@purdue.edu>

	* common-src/amflock.c (main): do not use aclose() in the configure
	  test case.  During configure we do not have areads_relbuf()
	  available and it makes configure think all the tests have failed.

1999-10-03 John R. Jackson  <jrj@purdue.edu>

	* common-src/amanda.h: protect the close macros and areads* from
	  out of range file descriptors.
	* common-src/file.c: ditto.

1999-10-02 John R. Jackson  <jrj@purdue.edu>

	* server-src/amindexd.c (build_disk_table): only "OK" results from
	  find_dump should be considered.

1999-10-02 John R. Jackson  <jrj@purdue.edu>

	* common-src/file.c (areads): when NO-ROOM became advisory and didn't
	  participate in a full handshake, it exposed a problem in areads()
	  where a static buffer was shared among all I/O.  Changed it to use
	  a separate buffer for each file descriptor.  Enhanced the test
	  program to check out the code.
	* common-src/amanda.h: ditto
	* restore-src/amidxtaped.c: minor areads/agets comment typo.
	* server-src/amindexd.c: ditto

1999-10-02 John R. Jackson  <jrj@purdue.edu>
