@@ -1,3 +1,8 @@
+1999-10-11  Nicolas Mayencourt  <Nicolas.Mayencourt@cui.unige.ch>
+
+	* server-src/amtoc.pl.in: Add new options -i and -t.  Print original
+	size, instead of size on tape.
+
 1999-10-07 John R. Jackson  <jrj@purdue.edu>
 
 	* common-src/stream.c (stream_server): remove reference to portrange
